# remote-phone

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: pypi.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/remotephone/: MainActivity.kt  MirrorWebSocketServer.kt  RemoteAccessibilityService.kt  ScreenCaptureService.kt
android/app/src/main/res/drawable/: button_primary.xml  ic_cast.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
fastlane/metadata/android/en-US/: full_description.txt
metadata/: com.remotephone.yml
metadata/en-US/: short_description.txt
metadata/en-US/changelogs/: 2.txt
remotephone/: __init__.py  main.py  requirements.txt  run.sh
remotephone/decoder/: __init__.py  audio_player.py  video_decoder.py
remotephone/input/: input_handler.py
remotephone/network/: scanner.py  ws_client.py
remotephone/ui/: main_window.py
