[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-phone"
version = "1.0.0"
description = "Mirror and control your Android phone from your Linux desktop over WiFi"
readme = "README.md"
license = "MIT"
authors = [{name = "dpk"}]
requires-python = ">=3.10"
keywords = ["android", "mirror", "remote", "phone", "screen-sharing", "wifi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: System :: Networking",
]
dependencies = [
    "PyQt6>=6.5",
    "websocket-client>=1.6",
    "av>=12.0",
    "numpy>=1.24",
    "sounddevice>=0.4",
]

[project.urls]
Homepage = "https://github.com/dpk404/remote-phone"
Repository = "https://github.com/dpk404/remote-phone"
Issues = "https://github.com/dpk404/remote-phone/issues"

[project.scripts]
remotephone = "remotephone.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["remotephone*"]
